--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -6,6 +6,9 @@ body {
     display: flex;
     flex-direction: column;
 }
+.container{
+    padding: 0px 20px;
+}
 
 .blog-container {
     display: flex;
@@ -76,6 +79,302 @@ body {
     }
 }
 
+//Jake styles goes here 
+.searching{
+    height: 30px;
+    width: 40px;
+    margin-left: 5px;
+    color: var(--date-color) !important;
+}
+.searchbar{
+    border-radius: 5px;
+    padding: 8px;
+    border-width: 0px;
+    color: var(--date-color);
+    background-color: #D9D9D9;
+}
+.detail__main{
+    color: var(--date-color);
+    padding: 0px 20px;
+    display: grid;
+    background-color: var(--bg);
+    .page_title{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        h4{
+            font-size: 48px;
+        }
+    }
+    .description__column{
+        display: flex;
+        width: 100%;
+        gap: 15px;
+        height: 15px;
+        align-items: center;
+        padding: 10px 0px;
+        img{
+            padding: 5px;
+            border: 1px solid white;
+            background-color: white;
+        }
+        h6{
+            font-size: 24px;
+        }
+        .profile{
+            height: 48px;
+            width: 48px;
+            border-radius: 50%;
+            color: var(--date-color);
+            background-color: var(--bg);
+        }
+    }
+    .mimage{
+        width: 100%;
+        height: 400px;
+        margin-top: 15px;
+        background-image: url("../assets/blogImages/blogimage.jpg") ;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center bottom;
+    }
+    .body__text{
+        margin-top: 20px;
+    }
+    .tags__cont{
+        display: flex;
+        gap: 15px;
+        margin-top: 15px;
+        color: var(--bg);
+        font-size: 20px ;
+        .tag{
+            padding: 5px 15px;
+            border-radius: 5px;
+            color: var(--bg);
+            width: 7rem;
+            text-align: center;
+            font-size: 14px;
+        }
+        
+    }
+    .tags__cont >:first-child{
+        background-color: #5A8622;
+    }
+    .tags__cont>:nth-child(3){
+        background-color: #046A71;
+    }
+    .tags__cont>:nth-child(2){
+        background-color: #9D6666;
+    }
+    .view_all{
+        padding: 30px 0px 0px 0px;
+        display: flex;
+        gap: 10px;
+        flex-direction: column;
+        a{
+            font-size: 24px;
+            color: #52B641;
+        }
+        .hr{
+            border: 1px solid var(--date-color);
+            width: 100%;
+        }
+    }
+    .corelated__articles{
+        display: flex;
+        flex-direction: column;
+        color: var(--fg);
+        h4{
+            font-size: 48px;
+        }
+        hr{
+            width: 100%;
+        }
+        .corelated__container{
+            display: grid;
+            grid-template-columns: 2fr 1fr;
+            // height: 500px;
+            row-gap: 20px;
+            // padding: 10px 0px;
+            .right{
+                // background-image: url("../assets/blogImages/blogimage.jpg");
+                // background-size: cover;
+                // margin-left: 10px;
+                // display: flex;
+                // justify-content: center;
+                // align-items: flex-end;
+                // color: white;
+                margin-bottom: 70px;
+                img{
+                    height: 80%;
+                    width: 100%;
+                    
+                }
+                p{
+                    position: absolute;
+                    bottom: 100px;
+                    // left: 50%;
+                    right: 40%;
+                    color: var(--bg);
+                }
+                .abs{
+                    position: relative;
+                    p{
+                        position: absolute;
+                        right: 30%;
+                        bottom: 0px;
+                    }
+                }
+                
+            }
+            .left{
+                display: flex;
+                justify-content: space-between;
+                flex-direction: column;
+                color: var(--fg);
+                h5{
+                    font-weight: 800;
+                    font-size: 40px;
+                }
+                p:nth-child(1){
+                    font-size: 32px;
+                }
+                .tag{
+                        background-color: #046A71;
+                        padding: 2px 15px;
+                        border-radius: 5px;
+                        width: 5rem;
+                        color: var(--bg);
+                        padding: 5px 15px;
+                        width: 7rem;
+                        text-align: center;
+                        font-size: 14px;
+                }
+            }
+           
+        }
+    }
+}
+
+@media (max-width: $breakpoint-md) {
+  .page_title h4 {
+        font-size: 24px !important;
+  }  
+  .description__column {
+    h6{font-size: 16px !important;}
+  }
+  .view_all{
+    a{
+        font-size: 16px !important;
+        
+    }
+  }
+  .corelated__articles{
+    h4{
+        font-size: 32px !important;
+    }
+  }
+  .corelated__container{
+    // margin: 20px 0px;
+    max-height: 300px;
+
+  }
+  .left{
+    h5{
+        font-size: 32px !important;
+        justify-content: start !important;
+    }
+    p:nth-child(1){
+        font-size: 24px;
+    }
+  }
+}
+
+@media (max-width: $breakpoint-sm) {
+    .tags__cont{
+        gap: 2px;
+        .tag{
+            padding: 3px 7px;
+            border-radius: 5px;
+            color: var(--bg);
+            width: 4rem !important;
+            text-align: center;
+            font-size: 10px !important;
+        }
+    }
+    .page_title h4{
+        font-size: 18px !important;
+    }
+    .description__column {
+        gap:5px !important;
+        h6{ font-size: 8px !important;}
+        
+    }
+.searchbar, .searching{
+    display: none;
+}
+.view_all{
+    a{
+        font-size: 18px !important;
+    }
+}
+.corelated__articles{
+    h4{
+        font-size: 18px !important;
+    }
+  }
+.detail__main h4{
+    font-size: 18px;
+}
+.description__column{
+    gap: 2px;
+    padding: 3px 0px;
+}
+.corelated__container{
+// height: 100px;
+// row-gap: 10px;
+justify-content: start;
+.left{
+    justify-content: flex-start !important;
+    gap: 0px;
+    h5{font-size: 18px !important;}
+    margin-top: 0px !important;
+    p{
+        font-size: 16px;
+        
+    
+    }
+    p:nth-child(1){
+        font-size: 14px !important;
+    }
+}
+
+.right{
+    margin-top: 50px;
+    margin-left: 0px;
+    // border: 1px solid red;
+    .abs{
+        height: 100%;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
+    }
+    p{
+        font-size: 12px !important;
+    }
+}
+}
+
+}
+
+@media (max-width: 360px) {
+    .abs{
+        p{
+            font-size: 8px !important;
+            right: 10px !important;
+            top: 60%;
+        }
+    }
+}
 @media (max-width: $breakpoint-md) {
     .content-container main {
         .posts {
