--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -68,6 +68,7 @@ body {
   --bg2: white;
   --stroke-color: #ddd;
   --date-color: rgba(0, 0, 0, 0.65);
+  --sharp-color:#000;
 }
 
 body.dark {
@@ -76,6 +77,7 @@ body.dark {
   --bg2: #2b2b2b;
   --stroke-color: #555;
   --date-color: white;
+  --sharp-color: #FFF;
 }
 
 svg.icon {
