--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -69,6 +69,7 @@ body {
   --stroke-color: #ddd;
   --date-color: rgba(0, 0, 0, 0.65);
   --sharp-color:#000;
+  --hov: blue;
 }
 
 body.dark {
@@ -78,6 +79,7 @@ body.dark {
   --stroke-color: #555;
   --date-color: white;
   --sharp-color: #FFF;
+  --hov: white;
 }
 
 svg.icon {
