--- a/styles/targeted-articles.scss
+++ b/styles/targeted-articles.scss
@@ -11,31 +11,13 @@ main {
 	flex: 1;
 }
 
-.about {
-	max-width: 1100px;
-	margin: 0 auto;
-	padding: 0 1rem;
-
-	@media (max-width: $breakpoint-md) {
-		max-width: 800px;
-		padding: 0 2rem;
-	}
-
-	@media (max-width: $breakpoint-sm) {
-		max-width: 480px;
-	}
-
-	p {
-		// font-size: 1.15em;
-	}
-}
 
 .page-header{
-	// max-width: 1000px; 
-	// margin: 0 auto !important; 
-	// color: var(--date-color);
-	// width: 100%;
-	// padding: 0px !important;
+	max-width: 1000px; 
+	margin: 0 auto !important; 
+	color: var(--date-color);
+	width: 100%;
+	padding: 0px !important;
 }
 .container {
 	padding: 0px 40px;
@@ -51,10 +33,8 @@ main {
 
 .cont{
 	display: grid;
-	// padding: 0px 200px;
 	grid-template-columns: 2fr 1fr;
 	gap: 25px;
-	margin-bottom: 30px;
 	.lef{
 		display: flex;
 		flex-direction: column;
@@ -64,13 +44,11 @@ main {
 			h4{
 				font-size: 24px;
 				font-weight: 700;
-				margin-top: 20px;
 	
 			}
 		}
 		a:hover{
-			color: var(--hov);
-			text-decoration: underline;
+			color:blue;
 		}
 		
 		p{
@@ -80,7 +58,8 @@ main {
 		}
 		.pop{
 			display: flex;
-			justify-content: space-between;
+			// justify-content: space-between;
+            gap: 15px;
 			align-items: center;
 			p:nth-child(1){
 				padding: 6px 20px;
@@ -88,23 +67,32 @@ main {
 				color: white;
 				background-color: brown;
 			}
+            p:nth-child(2){
+				padding: 6px 20px;
+				border-radius: 8px;
+				color: white;
+				background-color: rgb(10, 96, 244);
+			}
 	}
 }
 .righ{
 	background-image: url('/assets/blogImages/b-image.svg');
 				background-size: cover;
-				margin-top: 20px;
+				margin-top: 47px;
 				min-height: 200px;
 				width: 100%;
+                display: flex;
+                justify-content: center;
+                color: white;
+                align-items: end;
 }
 .hr{
-	border-top: 1px dashed red;
+	// border-top: 1px dashed red;
 	width: 100%;
-	margin-top: 30px;
 }
 }
 hr{
-	border-top: 1px dashed var(--fg);
+	// border-top: 1px dashed var(--fg);
 	width: 100%;
 	// margin-top: 20px;
 }
@@ -163,7 +151,6 @@ hr{
 	display: flex;
 	gap: 2px !important;
 	flex-direction: column-reverse;
-	margin-bottom: 0px !important;
 	.lef{
 		display: flex;
 		flex-direction: column;
